2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	Create a libgettextlib shared library.
	* Makefile.am (noinst_LIBRARIES): Remove variable.
	(lib_LTLIBRARIES): New variable.
	(libgettextlib_la_SOURCES): Renamed from libnlsut_a_SOURCES.
	(libgettextlib_la_HEADER): Renamed from libnlsut_a_HEADER.
	(libgettextlib_la_LIBADD): Renamed from libnlsut_a_LIBADD.
	(libgettextlib_la_LDFLAGS): New variable.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* mkdtemp.c: Include <inttypes.h> if it exists. Needed on platforms
	which have <inttypes.h> but not <stdint.h>, like BeOS.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* stdbool.h.in: Avoid syntax error on BeOS if <sys/socket.h> has
	already been included.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* basename.c: #undef basename before defining it. This avoids a
	warning on non-glibc platforms.

2001-10-09  Bruno Haible  <haible@clisp.cons.org>

	* localcharset.c (getc): Define as getc_unlocked if available.

2001-10-10  Bruno Haible  <haible@clisp.cons.org>

	* wait-process.h (wait_subprocess): New argument 'exit_on_error'.
	* wait-process.c (wait_subprocess): Implement 'exit_on_error' handling.
	Treat exitcode 127 like a failure to create the subprocess.
	* execute.h (execute): New argument 'exit_on_error'.
	* execute.c (execute): Implement 'exit_on_error' handling.
	* pipe.h (create_pipe_out, create_pipe_in, create_pipe_bidi): New
	arguments 'null_stderr' and 'exit_on_error'.
	* pipe-in.c (create_pipe_in): Implement 'null_stderr' and
	'exit_on_error' handling.
	* pipe-out.c (create_pipe_out): Likewise.
	* pipe-bidi.c (create_pipe_bidi): Likewise.
	* javacomp.c: Include pipe.h, wait-process.h, safe-read.h.
	(compile_java_class): Update for changed execute(). When testing for
	gcj, ignore gcj version 2.xx, require at least gcj 3.0.
	* javaexec.c (execute_java_class): Update for changed execute().
	* Makefile.am (libnlsut_a_SOURCES): Add safe-read.c.
	(libnlsut_a_HEADER): Add safe-read.h.