@@ -1,3 +1,8 @@
+2001-10-28  Bruno Haible  <haible@clisp.cons.org>
+
+	* progname.c (set_program_name) [BeOS]: Make program_name absolute
+	before removing "lt-".
+
 2001-10-21  Bruno Haible  <haible@clisp.cons.org>
 
 	Create a libgettextlib shared library.
